# invoice-review

./: .gitignore  Cargo.toml  README.md  README_RUST.md  deno.json  main.ts  main_test.ts  signals.ts
cli/: index.ts  index_test.ts  types.ts  version.ts
controllers/: index.ts  reviewInvoice.controller.ts
core/comparison/: discounts.ts  discounts_test.ts  index.ts  resolve_match.ts  review_invoice.ts  types.ts
core/spreadsheet/: constants.ts  index.ts  read_workbook.ts  read_workbook_test.ts  types.ts
errors/: index.ts
interfaces/: invoice_row.interface.ts  multiple_match.interface.ts  price_mismatch.interface.ts  review_report.interface.ts  system_row.interface.ts
models/: index.ts  invoice_row.model.ts  review_report.model.ts  system_row.model.ts
services/: report.service.ts  report.service_test.ts  spreadsheet.service.ts
services/filesystem/: ensure_parent.ts  types.ts  validate_paths.ts  write_text.ts
src/: lib.rs  main.rs
src/application/: mod.rs  review_invoice.rs
src/cli/: args.rs  mod.rs
src/commands/: mod.rs  review_invoice.rs
src/domain/: mod.rs
src/domain/comparison/: discounts.rs  mod.rs  resolve_match.rs  review.rs  types.rs
src/domain/spreadsheet/: mod.rs  types.rs
src/infrastructure/: mod.rs
src/infrastructure/filesystem/: ensure_parent.rs  mod.rs  validate_paths.rs  write_text.rs
src/infrastructure/report/: mod.rs  text_report.rs
src/infrastructure/spreadsheet/: mod.rs  reader.rs
src/shared/: errors.rs  mod.rs
src/shared/utils/: mod.rs  number.rs  (+1 more)
tests/: integration_cli.rs
utils/: number.ts  percentage.ts
